# spectatord

./: .bazelrc  .clang-format  .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  Dockerfile  METRICS.md  README.md  WORKSPACE  build.sh  conanfile.py  dependencies.bzl  requirements.txt
.github/workflows/: build.yml  pr.yml  release.yml  snapshot.yml
Dockerfiles/: Ubuntu.Dockerfile
admin/: CMakeLists.txt  admin_server.cc  admin_server.h  admin_server_test.cc
bench/: CMakeLists.txt  README.md  bench_tags.cc  get_measurement_bench.cc  measurements_fmt_bench.cc  parse_bench.cc  statsd_bench.cc  to_valid_bench.cc
docs/: CONAN.md  DOCKERBUILD.md  METRICS.md  MULTIPLATFORM.md
metatron/: CMakeLists.txt  metatron_config.h  metatron_sample.cc
root/etc/default/: spectatord.sample
server/: CMakeLists.txt  expiring_cache.h  handler.h  local.h  local_server.cc  local_server.h  logger.cc  proc_utils.cc  proc_utils.h  proc_utils_test.cc  spectatord.cc  spectatord.h  spectatord_test.cc  udp_server.cc  udp_server.h
spectator/: CMakeLists.txt  age_gauge.h  age_gauge_test.cc  atomicnumber.h  common_refs.cc  common_refs.h  compressed_buffer.cc  compressed_buffer.h  compressed_buffer_test.cc  config.h  config_test.cc  counter.cc  counter.h  counter_test.cc  dist_stats.h  dist_summary.cc  dist_summary.h  dist_summary_test.cc  gauge.cc  gauge.h  gauge_test.cc  gzip.cc  gzip.h  gzip_test.cc  http_client.cc  http_client.h  http_client_test.cc  http_server.cc  http_server.h  id.cc  id.h  id_test.cc  log_entry.h  max_gauge.cc  max_gauge.h  max_gauge_test.cc  measurement.h  meter.h  monotonic_counter.cc  monotonic_counter.h  (+38 more)
spectator/detail/: perc_policy.h
test-resources/: net_udp_1
tools/: CMakeLists.txt  admin-server-cli-test.sh  gen_perc_bucket_tags.cc  gen_perc_bucket_values.cc  gen_valid_chars.cc  generate_version.sh  metrics_gen.cc  udp_numbers.pl
util/: CMakeLists.txt  file_watcher.h  files.h  insight_log_sinks.h  json_log_formatter.h  logger.cc  logger.h  systemd.h  tcp_log_sink.h  unix_socket_log_sink.h  unix_socket_log_sink_test.cc
