load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

memory_allocator = select({
    "@bazel_tools//src/conditions:linux_x86_64": "@com_google_tcmalloc//tcmalloc",
    "//conditions:default": "@bazel_tools//tools/cpp:malloc", 
    })

cc_library(
    name = "spectator",
    srcs = ["spectator/common_refs.cc", "spectator/compressed_buffer.cc",
            "spectator/counter.cc", "spectator/dist_summary.cc", "spectator/gauge.cc", "spectator/gzip.cc",
            "spectator/http_client.cc", "spectator/id.cc", "spectator/logger.cc", "spectator/max_gauge.cc",
            "spectator/monotonic_counter.cc",
            "spectator/percentile_buckets.cc", "spectator/registry.cc",
            "spectator/smile.cc", "spectator/strings.cc", "spectator/string_pool.cc",
            "spectator/timer.cc"],
    hdrs = ["spectator/atomicnumber.h", "spectator/common_refs.h", "spectator/compressed_buffer.h",
            "spectator/config.h", "spectator/counter.h",
            "spectator/dist_stats.h",
            "spectator/dist_summary.h", "spectator/file_watcher.h", "spectator/gauge.h",
            "spectator/gzip.h", "spectator/http_client.h", "spectator/id.h",
            "spectator/log_entry.h", "spectator/logger.h",
            "spectator/max_gauge.h", "spectator/measurement.h",
            "spectator/meter.h", "spectator/monotonic_counter.h",
            "spectator/percentile_buckets.h",
            "spectator/percentile_distribution_summary.h", "spectator/percentile_timer.h",
            "spectator/publisher.h", "spectator/registry.h",
            "spectator/smile.h",
            "spectator/strings.h", "spectator/string_intern.h", "spectator/string_pool.h",
            "spectator/tags.h",
            "spectator/timer.h", "spectator/util.h",
            "percentile_bucket_tags.inc", "percentile_bucket_values.inc", "valid_chars.inc",
            "spectator/detail/perc_policy.h"],
    deps = [
        "@asio//:asio",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_github_fmtlib_fmt//:fmtlib",
        "@com_github_gabime_spdlog//:spdlog",
        "@com_github_tessil_hopscotch_map//:hopscotch_map",
        "@com_github_skarupke_flat_hash_map//:flat_hash_map",
        "@com_github_tencent_rapidjson//:rapidjson",
        "@curl",
        "@com_github_cyan4973_xxhash//:xxhash",
        "@net_zlib//:zlib",
        ],
    visibility = ["//visibility:public"])

cc_binary(
    name = "gen_perc_bucket_tags",
    srcs = ["tools/gen_perc_bucket_tags.cc"],
)

cc_binary(
    name = "gen_perc_bucket_values",
    srcs = ["tools/gen_perc_bucket_values.cc"],
)

cc_binary(
    name = "gen_valid_chars",
    srcs = ["tools/gen_valid_chars.cc"],
)

genrule(
    name = "gen_valid_chars_rule",
    outs = ["valid_chars.inc"],
    cmd = "$(location gen_valid_chars) > $@",
    tools = [
        "gen_valid_chars",
    ],
)

genrule(
    name = "gen_perc_bucket_tags_rule",
    outs = ["percentile_bucket_tags.inc"],
    cmd = "$(location gen_perc_bucket_tags) > $@",
    tools = [
        "gen_perc_bucket_tags",
    ],
)

genrule(
    name = "gen_perc_bucket_values_rule",
    outs = ["percentile_bucket_values.inc"],
    cmd = "$(location gen_perc_bucket_values) > $@",
    tools = [
        "gen_perc_bucket_values",
    ],
)

cc_test(
    name = "spectator_test",
    srcs = glob(["spectator/*test.cc", "spectator/sample_config.cc",
                 "spectator/http_server.*", "spectator/test_utils.*"]),
    deps = [
        ":spectator",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "to_valid_chars",
    srcs = ["bench/to_valid_bench.cc",],
    deps = [ "@com_google_benchmark//:benchmark", ]
)

cc_test(
    name = "tags_bench",
    srcs = ["bench/bench_tags.cc",],
    deps = [
        ":spectator",
        "@com_google_benchmark//:benchmark",
      ]
    )

cc_library(
    name = "spectatord",
    srcs = ["server/spectatord.cc", "server/logger.cc",
            "server/local_server.cc", "server/udp_server.cc", "server/proc_utils.cc"],
    hdrs = ["server/files.h", "server/expiring_cache.h", "server/spectatord.h", "server/logger.h",
            "server/udp_server.h", "server/local_server.h",
            "server/handler.h", "server/local.h", "server/proc_utils.h"],
    deps = [
        ":spectator",
        "@asio//:asio",
        "@com_google_absl//absl/synchronization",
        "@com_github_gabime_spdlog//:spdlog",
        "@com_github_fmtlib_fmt//:fmtlib",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "spectatord_test",
    srcs = ["server/spectatord_test.cc", "server/proc_utils_test.cc"],
    data = glob(["resources/*"]),
    deps = [
        ":spectatord",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "parse_bench",
    srcs = ["bench/parse_bench.cc"],
    malloc = memory_allocator,
    includes = ["server"],
    deps = [
        ":spectatord",
        "@com_google_benchmark//:benchmark",
    ],
)

cc_test(
    name = "ms_bench",
    srcs = ["bench/get_measurement_bench.cc"],
    malloc = memory_allocator,
    includes = ["server"],
    deps = [
        ":spectatord",
        "@com_google_benchmark//:benchmark",
    ],
)

cc_test(
    name = "statsd_bench",
    srcs = ["bench/statsd_bench.cc"],
    malloc = memory_allocator,
    includes = ["server"],
    deps = [
        ":spectatord",
        "@com_google_benchmark//:benchmark",
    ],
)

cc_test(
    name = "fmt_bench",
    srcs = ["bench/measurements_fmt_bench.cc"],
    malloc = memory_allocator,
    includes = ["server"],
    deps = [
        ":spectatord",
        "@com_google_benchmark//:benchmark",
    ],
)

cc_binary(
    name = "spectatord_main",
    srcs = ["bin/spectatord_main.cc"],
    local_defines = select({
        "@bazel_tools//src/conditions:linux_x86_64": ["BACKWARD_HAS_BFD=1"],
        "//conditions:default": [],
        }),
    malloc = memory_allocator,
    linkopts = select({
        "@bazel_tools//src/conditions:linux_x86_64": ["-lbfd", "-ldl"],
        "//conditions:default": [],
        }),
    includes = ["server"],
    deps = [
        ":spectatord",
        "@spectator_cfg//:spectator_cfg",
        "@com_google_absl//absl/flags:parse",
        "@com_github_gabime_spdlog//:spdlog",
        "@com_github_bombela_backward//:backward",
    ],
)

cc_binary(
    name = "metrics_gen",
    srcs = ["tools/metrics_gen.cc", "server/local.h"],
    malloc = memory_allocator,
    includes = ["server"],
    linkopts = ["-pthread"],
    deps = [
        "@asio//:asio",
        "@com_google_absl//absl/strings",
        "@com_github_gabime_spdlog//:spdlog",
        "@com_github_fmtlib_fmt//:fmtlib",
    ],
)
